[dependencies]
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = "0.1"
tauri = { workspace = true }
thiserror = { workspace = true }

[features]
system-tray = [ "tauri/system-tray" ]

[lib]
path = "Source/lib.rs"

[package]
authors = { workspace = true }
description = "Position your windows at well-known locations."
edition = { workspace = true }
license-file = { workspace = true }
name = "tauri-plugin-positioner"
rust-version = { workspace = true }
version = "1.0.5"
