[dependencies]
log = { version = "0.4.25" }
serde = { version = "1.0.217" }
serde_json = { version = "1.0.138" }
serde_repr = "0.1"
tauri = { version = "2.2.5" }
thiserror = { version = "2.0.11" }

[features]
system-tray = [ "tauri/system-tray" ]

[lib]
path = "Source/lib.rs"

[package]
authors = ["Tauri Programme within The Commons Conservancy"]
description = "Position your windows at well-known locations."
edition = "2024"
license-file = "LICENSE"
name = "tauri-plugin-positioner-read-only"
rust-version = "1.85.0"
version = "1.0.5"
